# Automacao-WEB

./: .gitignore  README.md  check_test_failures.sh  export_output_folder.sh  pyproject.toml  requirements.txt  run_tests.py
resource/: main.robot
resource/data/: data_config_web_test.yaml
resource/helpers/: helpers.resource  setup_teardown.resource
resource/log/: console_log.resource  evidencias.resource
resource/pages/actions/: Basics.resource
resource/pages/actions/keywords/cadastros/cadastro_de_veiculos/maritimo/: Navio.resource
resource/pages/actions/keywords/home/: Login_Actions.resource
resource/pages/actions/keywords/modelo/modelo/: Processo_Produtivo_Nova.resource
resource/pages/objects/cadastros/cadastro_de_veiculos/maritimo/: navio.resource
resource/pages/objects/home/: home_objects.resource
resource/pages/objects/modelo/modelo/: modelo.resource
resource/utils/: config_path.py
test/Cadstros/Cadastro_de_Veiculos/: Navio.robot
test/Home/: Login.robot
test/Modelo/modelo/: Modelo.robot
test/Pagina_Login/: Login.robot
