[tool.poetry]
name = "automacao-web-v1"
version = "0.0.1"
description = "automacao de UI para Sankhya implementando metodologias modernas e construindo framework com robot"
authors = ["Augusto Vieira <augusto.vieira@sankhya.com.br>"]
readme = "README.md"
packages = [{include = "run_tests.py"}]

[tool.poetry.dependencies]
python = "^3.9"
certifi = "^2022.9.14"
robotframework = "^5.0.1"
PyYAML = "^6.0"
robotframework-requests = "^0.9.3"
selenium = "4.9.1"
robotframework-selenium2library = "^3.0.0"
xmltodict = "^0.13.0"
pytz = "^2022.7.1"
rpaframework-pdf = "^7.1.3"
robotframework-jsonlibrary = "^0.5"

[tool.poetry.dev-dependencies]
robotframework-debuglibrary = "<2"

[tool.poetry.scripts]
web = "run_tests:robot_local_exe"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
